<resources>
    <string name="app_name">Aptitude Fitness Tracker</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="detail_name">Detail</string>
    <string name="detail_value">Value</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="share_routine">Share Routine</string>

    <!-- ACCOUNT STRING-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Log Me In!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_remove">Remove</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirmation">Sign Out of Aptitude?</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <!-- THEME STRING-->
    <string name="change_theme">Change Theme</string>
    <string name="theme_edit">Change default theme</string>
    <string name="theme_white">White</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <!-- FONT SIZE STRING-->
    <string name="font_edit">Change Font Size</string>
    <string name="font_very_small">Very Small</string>
    <string name="font_small">Small</string>
    <string name="font_normal">Normal</string>
    <string name="font_big">Big</string>
    <string name="font_very_big">Very Big</string>
    <!-- FONT FAMILY STRING-->
    <string name="edit_font_family">Change Font Family</string>
    <string name="roboto">Roboto</string>
    <string name="calibri">Calibri</string>
    <string name="helvetica">Helvetica</string>
    <string name="comic">Comic</string>
</resources>