<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radio_group_fontFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/ff_roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roboto" />

        <RadioButton
            android:id="@+id/ff_caliri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calibri" />

        <RadioButton
            android:id="@+id/ff_comic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comic" />

        <RadioButton
            android:id="@+id/ff_helvetica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helvetica" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>