<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.activities.SettingsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layout_coordinate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AptitudeFitnessTracker.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/Theme.AptitudeFitnessTracker.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout_coordinate">

        <androidx.cardview.widget.CardView
            android:id="@+id/container_card_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <LinearLayout
                android:id="@+id/linearChangeTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgTheme"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/baseline_settings_brightness_24"
                    app:tint="?attr/iconTintOnCard" />

                <TextView
                    android:id="@+id/txtThemeChange"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/change_theme" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_card_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <LinearLayout
                android:id="@+id/linearFontSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgChangeFontSize"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_font_black_24dp"
                    app:tint="?attr/iconTintOnCard" />

                <TextView
                    android:id="@+id/txtChangeFontSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/font_edit" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_card_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <LinearLayout
                android:id="@+id/linearChangeFontFamily"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgChangeFontFamily"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_font_family_24dp"
                    app:tint="?attr/iconTintOnCard" />

                <TextView
                    android:id="@+id/option_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/edit_font_family" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>